# streaming-personalization-platform

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  main.py
api/routes/: metrics.py  recommend.py
configs/: base.yaml  data.yaml  inference.yaml  training.yaml
deployment/: docker-compose.yml
deployment/kubernetes/: api-deployment.yaml  api-service.yaml  configmap.yaml  namespace.yaml  training-job.yaml
docker/: Dockerfile.api  Dockerfile.training
docs/: architecture.md  ml_lifecycle.md  system_design.md
scripts/: evaluate_models.py  generate_synthetic_data.py  register_models.py  run_feature_pipeline.py  seed_demo_data.py  train_candidate_model.py  train_ranking_model.py
src/streaming_ml_platform/: __init__.py  config.py  logging_utils.py  paths.py
src/streaming_ml_platform/data/: loaders.py  synthetic.py  validators.py
src/streaming_ml_platform/features/: batch_features.py  interaction_features.py  item_features.py  user_features.py
src/streaming_ml_platform/inference/: ranking.py  retrieval.py  service.py
src/streaming_ml_platform/monitoring/: drift.py  logging.py  metrics.py
src/streaming_ml_platform/pipelines/: evaluation_pipeline.py  feature_pipeline.py  training_pipeline.py
src/streaming_ml_platform/registry/: model_registry.py
src/streaming_ml_platform/schemas/: api.py  events.py  features.py
tests/: test_api.py  test_candidate_model.py  test_data_generation.py  test_feature_pipeline.py  test_ranking_model.py  test_registry.py
(+8 files in other folders)
